Fix text spacing issues

--- a/aesthetic.css
+++ b/aesthetic.css
@@ -18,7 +18,7 @@ select {
   font-weight: 300;
   letter-spacing: -0.01rem;
   text-decoration: none;
-  line-height: 1.6rem;
+  line-height: 1.4rem;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   scroll-behavior: smooth;
@@ -35,7 +35,6 @@ a {
   position: relative;
   color: #007f6e;
   border-bottom: 1px solid #007f6e;
-  padding-bottom: 2px;
 }
 
 a:visited {
@@ -178,7 +177,6 @@ ul li:before {
   position: absolute;
   left: 0;
   font-size: 0.6rem;
-  line-height: 2.1;
 }
 
 ul li > strong {
